correct extension pickle
add ".sav" to the name of the pickle file on tge Jupyter Notebbok

--- a/Obesity-PythonForDataAnalysis.ipynb
+++ b/Obesity-PythonForDataAnalysis.ipynb
@@ -6051,15 +6051,8 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(RFmodel, open('RF_model', 'wb'))"
+    "pickle.dump(RFmodel, open('RF_model.sav', 'wb'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
